<resources>
    <string name="app_name">Genmas Mobile</string>
    <string name="app_sub_name">for Android</string>
    <string name="semboyan">LUHUNG ELMUNA, JEMBAR PANALARNA, SAE AKHLAKNA, TUR PARIGEL KADAEKNA</string>

    <string name="company_name">SDN Gentra Masekdas</string>
    <string name="company_sub_name">Kota Bandung</string>

    <string name="navigation_drawer_open">Buka Navigasi</string>
    <string name="navigation_drawer_close">Tutup Navigasi</string>

    <string name="action_settings">Tentang Kami</string>

    <string name="menu_beranda">Beranda</string>

    <string name="menu_profil">Profil</string>

    <string name="menu_kepegawaian">Kepegawaian</string>
    <string name="menu_pengajar">Staf Pengajar</string>
    <string name="menu_adm">Staf Administrasi</string>

    <string name="menu_kesiswaan">Kesiswaan</string>
    <string name="menu_siswa">Siswa</string>

    <string name="menu_gallery">Galeri</string>

    <string name="menu_about">Tentang Genmas Mobile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="content_not_found">Konten Tidak Ditemukan</string>

</resources>
